# turtlebot_visual_docking

./: CMakeLists.txt  README.md  package.xml
3dmodel/: Halterung.dxf  tag_mounting.scad  tag_mounting_bottom.scad
action/: Docking.action
docking/: CMakeLists.txt  package.xml
docking/action/: .Docking.action.swp  Docking.action  GoHome.action
docking/include/: Avg.h  Docking.h
docking/launch/: justbringup.launch  start_docking.launch  start_dockingServer.launch  start_tagdetection.launch  stop_distance.launch
docking/src/: Avg.cpp  Docking.cpp  avg.cpp  docking_node.cpp  docking_server.cpp  stop_distance_node.cpp
include/dock/: Docking.h
include/turtlebot_visual_docking/: Avg.h  Docking.h
launch/: docking_server.launch  justbringup.launch
src/: Avg.cpp  Docking.cpp  dock.cpp  docking_server.cpp
